# yew_webview_bridge

./: Cargo.toml
src/: backend.rs  frontend.rs  lib.rs
src/js/: invoke_webview_exists.js
